Fixed re-ordering possibility